--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@copilotkit/react-core": "^1.10.1",
     "@copilotkit/react-ui": "^1.10.1",
+    "algoliasearch": "^5.15.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
